# lab12MTP

./: .coveragerc  .env.example  .gitignore  Dockerfile  PROMPT_LOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ai_pr_review.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/app/: database.py  main.py
src/app/api/v1/: analytics.py  auth.py  certificates.py  courses.py  enrollments.py  lessons.py  quizzes.py
src/app/core/: config.py
src/app/models/: __init__.py  certificate.py  course.py  enrollment.py  lesson.py  quiz.py  user.py
src/app/repositories/: base.py  certificate.py  course.py  enrollment.py  lesson.py  quiz.py  user.py
src/app/schemas/: certificate.py  course.py  enrollment.py  lesson.py  quiz.py  user.py
src/app/services/: analytics.py  auth.py  certificates.py  courses.py  enrollments.py  lessons.py  quizzes.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_certificates.py  test_courses.py  test_enrollments.py  test_extra_coverage.py  test_lessons.py  test_quizzes.py  test_services_direct.py  test_services_edge_cases.py
